--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "immer": "^11.1.3",
     "lucide-react": "^0.562.0",
     "normalize.css": "^8.0.1",
     "react": "^19.1.0",
