vndb网络请求测通

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-http": "^2.5.6",
     "@tauri-apps/plugin-opener": "^2",
-    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
