--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,5 +27,5 @@ thiserror = "2.0.17"
 tokio = "1.49.0"
 directories = "6.0.0"
 lazy_static = "1.5.0"
-tauri-plugin-fs = "2"
 tauri-plugin-dialog = "2"
+tauri-plugin-http = "2"
