--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "2.0.17"
 tokio = "1.49.0"
+reqwest = { version = "0.11", features = ["json", "stream"] }
 directories = "6.0.0"
 lazy_static = "1.5.0"
 tauri-plugin-dialog = "2"
