--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,12 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+sqlx = { version = "0.7", features = [
+  "runtime-tokio",
+  "sqlite",
+  "macros",
+  "chrono",
+] }
 chrono = { version = "0.4.43", features = ["serde"] }
 tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-opener = "2"
