--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,3 +37,4 @@ lazy_static = "1.5.0"
 tauri-plugin-dialog = "2"
 tauri-plugin-http = "2"
 tauri-plugin-log = "2"
+tauri-plugin-system-info = { git = "https://github.com/HuakunShen/tauri-plugin-system-info", branch = "v2" }
