--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.12.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tauri-plugin-system-info-api": "^2.0.10",
