--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-VITE_API_VNDB_VN_URL=https://api.vndb.org/kana/vn
+# bangumi
 VITE_API_BANGUMI_VN_URL=https://api.bgm.tv/v0/search/subjects
+VITE_API_BANGUMI_VN_SUBJECT_URL=https://api.bgm.tv/v0/subjects/
+# vndb
+VITE_API_VNDB_VN_URL=https://api.vndb.org/kana/vn
+# ymgal
 VITE_API_YMGAL_VN_URL=https://www.ymgal.games/open/archive/search-game
