--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ tauri-plugin-system-info = { git = "https://github.com/HuakunShen/tauri-plugin-s
 zip = "6"
 walkdir = "^2.5.0"
 font-kit = "0.14.3"
+window-vibrancy = "0.7"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
