--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,7 @@ zip = "6"
 walkdir = "^2.5.0"
 font-kit = "0.14.3"
 window-vibrancy = "0.7"
+sysinfo = "0.38.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
