--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ sqlx = { version = "0.8", features = [
   "macros",
   "chrono",
 ] }
+uuid = { version = "1.20.0", features = ["v4"] }
 chrono = { version = "0.4.43", features = ["serde"] }
 tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-opener = "2"
@@ -39,6 +40,7 @@ walkdir = "^2.5.0"
 font-kit = "0.14.3"
 window-vibrancy = "0.7"
 sysinfo = "0.38.0"
+tauri-plugin-fs = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
