--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "el": "bunx lingui extract",
+    "cl": "bunx lingui compile --typescript"
   },
   "dependencies": {
+    "@lingui/react": "^5.9.0",
     "@nivo/calendar": "^0.99.0",
     "@nivo/core": "^0.99.0",
     "@nivo/radar": "^0.99.0",
@@ -41,6 +44,7 @@
     "lucide-react": "^0.562.0",
     "nanoid": "^5.1.6",
     "normalize.css": "^8.0.1",
+    "npm": "^11.8.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.0",
@@ -52,11 +56,13 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@lingui/swc-plugin": "^5.10.1",
+    "@lingui/vite-plugin": "^5.9.0",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.0.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react-swc": "^4.2.3",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
