--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@tauri-apps/plugin-autostart": "~2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-global-shortcut": "~2",
     "@tauri-apps/plugin-http": "^2.5.6",
     "@tauri-apps/plugin-log": "~2",
+    "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-opener": "^2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
