--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,15 +14,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-sqlx = { version = "0.8", features = [
-  "runtime-tokio",
-  "sqlite",
-  "macros",
-  "chrono",
-] }
-uuid = { version = "1.20.0", features = ["v4"] }
-chrono = { version = "0.4.43", features = ["serde"] }
-tauri = { version = "2", features = ["protocol-asset"] }
+tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -52,3 +44,11 @@ tauri-plugin-notification = "2"
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
+sqlx = { version = "0.8", features = [
+  "runtime-tokio",
+  "sqlite",
+  "macros",
+  "chrono",
+] }
+uuid = { version = "1.20.0", features = ["v4"] }
+chrono = { version = "0.4.43", features = ["serde"] }
