压缩包添加游戏

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ windows = { version = "0.62", features = [
   "Win32_System_Threading",
 ] }
 tauri-plugin-notification = "2"
+unrar = "0.5.8"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
