游戏信息网络更新

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+VITE_API_USER_AGENT="yumigal/1.0.0 (https://github.com/yumilengjiao/yumihub)"
 # bangumi
 VITE_API_BANGUMI_VN_URL=https://api.bgm.tv/v0/search/subjects
 VITE_API_BANGUMI_VN_SUBJECT_URL=https://api.bgm.tv/v0/subjects/
