--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "yumihub"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["yumilengjiao"]
 edition = "2021"
 
 
@@ -13,13 +13,31 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
+[workspace]
+members = ["crates/database"]
+resolver = "2"
+
+[workspace.dependencies]
+sqlx = { version = "0.8", features = [
+  "runtime-tokio",
+  "sqlite",
+  "macros",
+  "chrono",
+] }
+serde = { version = "1", features = ["derive"] }
+tokio = "1.49.0"
+chrono = { version = "0.4.43", features = ["serde"] }
+
 [dependencies]
+sqlx = { workspace = true }
+serde = { workspace = true }
+tokio = { workspace = true }
+chrono = { workspace = true }
+serde_json = "1"
+database = { path = "./crates/database" }
 tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 thiserror = "2.0.17"
-tokio = "1.49.0"
 reqwest = { version = "0.13", features = ["json", "stream"] }
 directories = "6.0.0"
 lazy_static = "1.5.0"
@@ -45,11 +63,4 @@ unrar = "0.5.8"
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
-sqlx = { version = "0.8", features = [
-  "runtime-tokio",
-  "sqlite",
-  "macros",
-  "chrono",
-] }
 uuid = { version = "1.20.0", features = ["v4"] }
-chrono = { version = "0.4.43", features = ["serde"] }
