--- a/src-tauri/crates/theme/Cargo.toml
+++ b/src-tauri/crates/theme/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
+lazy_static = { workspace = true }
 json5 = "1.3.1"
 thiserror = "2.0.18"
