--- a/src-tauri/assets/themes/default.json5
+++ b/src-tauri/assets/themes/default.json5
@@ -5,6 +5,7 @@
   config: {
     version: "1.0",           // 配置协议版本，用于后续兼容性升级
     themeName: "default",   // 主题唯一标识符
+    author: "yumilengjiao",
     variables: {
 
     }
@@ -58,7 +59,6 @@
                   nt: "Entry",
                   props: {
                     span: 2,
-                    title: "首页",
                     icon: "house",
                     path: "/"
                   },
@@ -75,7 +75,6 @@
                   nt: "Entry",
                   props: {
                     span: 2,
-                    title: "游戏",
                     icon: "gamepad-2",
                     path: "/library"
                   },
@@ -92,7 +91,6 @@
                   nt: "Entry",
                   props: {
                     span: 2,
-                    title: "个人",
                     icon: "user-round",
                     path: "/user"
                   },
@@ -109,7 +107,6 @@
                   nt: "Entry",
                   props: {
                     span: 2,
-                    title: "设置",
                     icon: "sliders-vertical",
                     path: "/setting"
                   },
